# composite-pattern

./: CMakeLists.txt  README.org  composite.cpp  composite.h
